src/index.css
:root {
  --bg-color: hsl(0, 0%, 100%);
  --body-bg-color: hsl(0, 0%, 98%);
  --general-text: hsl(235, 19%, 35%);
  --main-heading: hsl(0, 0%, 98%);
  --checkmark-bg: hsl(233, 11%, 84%);
  --checkmark-gradient-bg: linear-gradient(
    to bottom right,
    hsl(192, 100%, 67%),
    hsl(280, 87%, 65%)
  );
  --checkmark-inner-bg: hsl(236, 33%, 92%);
  --border-color: hsl(236, 33%, 92%);
  --btn-color: hsl(236, 9%, 61%);
  --hover-color: hsl(235, 19%, 35%);
  --btn-active: hsl(220, 98%, 61%);
  --box-shadow: 0px 5px 10px hsl(233, 11%, 84%);
  --bg-desktop: url("./images/bg-desktop-light.jpg");
  --bg-mobile: url("./images/bg-mobile-light.jpg");
}

.darkmode {
  --body-bg-color: hsl(235, 21%, 11%);
  --bg-color: hsl(235, 24%, 19%);
  --general-text: hsl(234, 39%, 85%);
  --main-heading: hsl(0, 0%, 98%);
  --checkmark-bg: hsl(237, 14%, 26%);
  --checkmark-gradient-bg: linear-gradient(
    to bottom right,
    hsl(192, 100%, 67%),
    hsl(280, 87%, 65%)
  );
  --checkmark-inner-bg: hsl(237, 14%, 26%);
  --border-color: hsl(237, 14%, 26%);
  --btn-color: hsl(234, 11%, 52%);
  --hover-color: hsl(236, 33%, 92%);
  --box-shadow: 0px 5px 15px hsl(240, 22%, 7%);
  --bg-desktop: url("./images/bg-desktop-dark.jpg");
  --bg-mobile: url("./images/bg-mobile-dark.jpg");
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

button {
  display: inline-block;
  border: none;
  outline: none;
  margin: 0;
  text-decoration: none;
  background: transparent;
  font: inherit;
  font-size: 0.85rem;
  font-weight: 500;
  line-height: 1;
  cursor: pointer;
  color: var(--btn-color);
}

button:hover {
  color: var(--hover-color);
}

img {
  max-width: 100%;
}

input {
  font: inherit;
  font-size: 0.9rem;
  color: inherit;
  /* padding: 0.7em 0; */
  border: none;
}

.row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.dark-bg {
  background-color: var(--bg-color);
}

.push {
  margin-left: auto;
}

.container {
  width: 90%;
  max-width: 700px;
  margin: 0 auto;
}

body {
  font-family: "Josefin Sans", sans-serif;
  font-size: 15px;
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  background: var(--body-bg-color) var(--bg-mobile) no-repeat top left / 100%
    30vh;
  color: var(--general-text);
}

/* Header */
header {
  padding: 3rem 0 2rem;
}

header .heading {
  color: var(--main-heading);
  font-size: 1.6rem;
  text-transform: uppercase;
  letter-spacing: 0.4em;
}

header .sun-icon,
header .moon-icon {
  width: 1.4rem;
  height: 1.4rem;
}

.delete-icon {
  width: 1rem;
  height: 0.8rem;
}

/* Form */
form .form-control {
  border-radius: 5px;
  overflow: hidden;
  padding: 1rem 1rem;
}

form .form-control.row {
  justify-content: flex-start;
}

.checkmark {
  border-radius: 50%;
  width: 1.3rem;
  height: 1.3rem;
  background: var(--checkmark-bg);
  /* padding: 0.05rem; */
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 1rem;
  transition: background 0.4s ease-in-out;
}

.list-container .checkmark:hover {
  background: var(--checkmark-gradient-bg);
}

.checkmark.completed {
  background: var(--checkmark-gradient-bg);
}

.checkmark-inner {
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  background-color: var(--bg-color);
  border-radius: 50%;
}

input[type="text"] {
  flex: 3;
  outline: none;
}

input[type="checkbox"] {
  display: none;
}

/* List container */
.list-container {
  border-radius: 5px;
  overflow: hidden;
  margin: 1.5rem 0;
  text-align: center;
  box-shadow: var(--box-shadow);
}

.display-msg {
  padding: 1rem 0 0;
}

.list-footer {
  padding: 1rem;
  border-radius: 5px;
}

.acitve-todos-count {
  color: var(--btn-color);
}

.list-item {
  padding: 1rem;
  border-bottom: 1px solid var(--border-color);
  background-color: var(--bg-color);
  text-align: left;
}

.todo-text.completed {
  text-decoration: line-through;
  color: var(--btn-color);
}

.filter {
  padding: 0.5rem 1rem;
  border-radius: 5px;
  box-shadow: var(--box-shadow);
}
.filter.row {
  justify-content: center;
}

.filter button {
  margin: 0 0.5rem;
  padding: 0.5rem;
}

.active-btn {
  color: var(--btn-active);
}

.drag-drop {
  color: var(--btn-color);
  text-align: center;
  margin: 2rem 0;
}

/* Media Queries */

@media (min-width: 750px) {
  body {
    background: var(--body-bg-color) var(--bg-desktop) no-repeat top left/100vw
      30vh;
  }

  header {
    padding: 5rem 0 3rem;
  }

  header .heading {
    font-size: 2rem;
  }
}

